chore: remove old and unused code and comments.