@@ -3,29 +3,35 @@ package io.github.renatoxico.extract.service;
 import io.github.renatoxico.extract.exception.ProcessingException;
 import io.github.renatoxico.extract.model.CategoryMapper;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.genai.Client;
+import com.google.genai.types.GenerateContentResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.Resource;
-import org.springframework.http.*;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.ResponseExtractor;
 import org.springframework.web.client.RestTemplate;
-import com.google.genai.Client;
-import com.google.genai.types.GenerateContentResponse;
 
 import java.io.BufferedReader;
-import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 @Service
 public class AiProcessorService {
     private static final Logger LOG = LoggerFactory.getLogger(AiProcessorService.class);
-    private static final String URL = "http://localhost:11434/api/generate";
-    private static final String MODEL = "gemma3:4b";
+    private static final String OLLAMA_URL = "http://localhost:11434/api/generate";
+    private static final String OLLAMA_MODEL = "gemma3:4b";
 
     @Value("${api.key}")
     private String API_KEY;
@@ -69,12 +75,10 @@ public class AiProcessorService {
             prompt,
             null);
 
-            if (response.text() != null) {
-                String aiResponse = response.text();
-                if (aiResponse != null) {
-                    LOG.info("Received response from Gemini");
-                    return mapCategories(aiResponse);
-                }
+            String aiResponse = response.text();
+            if (aiResponse != null && !aiResponse.isBlank()) {
+                LOG.info("Received response from Gemini");
+                return mapCategories(aiResponse);
             }
         } catch (Exception ex) {
             LOG.error("Error calling Gemini API: {}", ex.getMessage(), ex);
@@ -99,58 +103,59 @@ public class AiProcessorService {
         return prompt.toString();
     }
 
-    public List<CategoryMapper> processWithAI(List<CategoryMapper> expenses) {
+    public List<CategoryMapper> processWithLocalLLM(List<CategoryMapper> expenses) {
         RestTemplate restTemplate = new RestTemplate();
         String prompt = buildPrompt(expenses);
-
-        Map<String, Object> body = getRequestBody(prompt);
+        Map<String, Object> body = getLocalLlmRequestBody(prompt);
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
+        HttpEntity<Map<String, Object>> requestEntity = new HttpEntity<>(body, headers);
 
-        HttpEntity<Map<String, Object>> req = new HttpEntity<>(body, headers);
         try {
-            LOG.info("Calling LLM API");
-            ResponseExtractor<String> extractor = response -> {
-                StringBuilder resp = new StringBuilder();
+            LOG.info("Calling local Ollama API");
+            ResponseExtractor<String> responseExtractor = response -> {
+                StringBuilder content = new StringBuilder();
                 try (BufferedReader reader = new BufferedReader(
-                        new InputStreamReader(response.getBody(), StandardCharsets.UTF_8))
-                ) {
+                        new InputStreamReader(response.getBody(), StandardCharsets.UTF_8))) {
                     String line;
-                    while((line = reader.readLine()) != null) {
-                        if (line.trim().isEmpty()) continue;
+                    while ((line = reader.readLine()) != null) {
+                        if (line.isBlank()) {
+                            continue;
+                        }
                         Map<?, ?> chunk = new ObjectMapper().readValue(line, Map.class);
-                        Object jsonResp = chunk.get("response");
-                        if (jsonResp != null)
-                            resp.append(jsonResp.toString());
+                        Object responseContent = chunk.get("response");
+                        if (responseContent != null) {
+                            content.append(responseContent);
+                        }
                     }
-                    return resp.toString();
                 }
+                return content.toString();
             };
 
-            String fullResponse = restTemplate.execute(URL, HttpMethod.POST, request -> {
-                request.getHeaders().putAll(req.getHeaders());
-                new ObjectMapper().writeValue(request.getBody(), req.getBody());
-            }, extractor );
-            LOG.info("LLM API call completed");
-            //LOG.info("Full response: {}", fullResponse);
-            if (fullResponse != null) {
-                return mapCategories(fullResponse);
+            String response = restTemplate.execute(OLLAMA_URL, HttpMethod.POST, request -> {
+                request.getHeaders().putAll(requestEntity.getHeaders());
+                new ObjectMapper().writeValue(request.getBody(), requestEntity.getBody());
+            }, responseExtractor);
+
+            LOG.info("Local Ollama API call completed");
+            if (response != null) {
+                return mapCategories(response);
             }
-        } catch (Exception e) {
-            LOG.error("error calling LLM", e);
+        } catch (Exception ex) {
+            LOG.error("Error calling local Ollama API", ex);
         }
-        return expenses; // fallback empty JSON array
+        return expenses;
     }
 
-    private Map<String, Object> getRequestBody(String prompt){
+    private Map<String, Object> getLocalLlmRequestBody(String prompt) {
         Map<String, Object> options = new HashMap<>();
         options.put("num_ctx", 4096);
         options.put("num_predict", 4096);
         options.put("temperature", 0);
 
         Map<String, Object> body = new HashMap<>();
-        body.put("model", MODEL);
+        body.put("model", OLLAMA_MODEL);
         body.put("prompt", prompt);
         body.put("stream", true);
         body.put("options", options);
@@ -162,15 +167,15 @@ public class AiProcessorService {
         String[] lines = aiResponse.split("\\r?\\n");
         for(String line : lines){
             if(line.isBlank() || !line.contains("|"))
-                continue;//invalid line -> skip
+                continue;
 
             String[] parts = line.split("\\|");
 
             if(parts.length != 2)
-                continue;//invalid format -> skip
+                continue;
 
             if(!VALID_CATEGORIES.contains(parts[1].trim()))
-                continue;//invalid category -> skip
+                continue;
 
             res.add(new CategoryMapper(parts[0].trim(), parts[1].trim()));
         }
